add: auth middleware for edu
