# docs/swagger.json
@@ -259,6 +259,11 @@
         },
         "/edu/buildings": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Получить список корпусов",
                 "consumes": [
                     "application/json"
@@ -291,6 +296,11 @@
         },
         "/edu/faculties": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Получить список всех факультетов",
                 "consumes": [
                     "application/json"
@@ -323,6 +333,11 @@
         },
         "/edu/faculties/{faculty_id}/programs": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Получить всех программ факультета",
                 "consumes": [
                     "application/json"
@@ -370,6 +385,11 @@
         },
         "/edu/types_of_subject": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Получить список типов всех предметов",
                 "consumes": [
                     "application/json"
